rm java 11 method